--- a/code/package.json
+++ b/code/package.json
@@ -22,7 +22,10 @@
     "debug": "^3.1.0",
     "minimist": "^1.2.3",
     "acorn": "^5.7.4",
-    "diff": "^3.5.0"
+    "diff": "^3.5.0",
+    "node-forge": "^1.3.0",
+    "markdown-it": "^12.3.2",
+    "ansi-regex": "^5.0.1"
   },
   "devDependencies": {
     "sitespeed.io": "^23.6.1"
